--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "npm run dev",
     "build": "npm run lint && tsc && vite build",
+    "fix": "eslint --fix",
     "lint": "eslint .",
     "dev": "vite"
   },
